--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/icons-material": "^6.4.8",
+    "@mui/material": "^6.4.8",
     "framer-motion": "^12.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
+    "react-scroll": "^1.9.3",
     "react-tsparticles": "^2.12.2",
     "swiper": "^11.2.6"
   },
